# content-review

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: setup.ps1
src/banshield/: __init__.py  config.py  main.py
src/banshield/agents/: audio_agent.py  compliance_agent.py  fix_agent.py  risk_agent.py  vision_agent.py
src/banshield/api/: models.py  routes.py
src/banshield/core/: llm_provider.py  policy_monitor.py
src/banshield/crew/: compliance_crew.py
src/banshield/policies/: embedder.py  scraper.py  sources.py  updater.py
src/banshield/services/: azure_reasoning.py  azure_vision.py  policy_retriever.py  qdrant_service.py  video_processor.py  vision_service.py  whisper_service.py
src/banshield/utils/: helpers.py
tests/: test_api.py  test_services.py
